working mount detailed page

--- a/src/components/Pets/PetCardList.css
+++ b/src/components/Pets/PetCardList.css
@@ -40,5 +40,9 @@
     font-family: 'Bebas Neue';
     text-align: center;
     margin: 60px;
+}
 
+.nav-link {
+    text-decoration: none;
+    color: white;
 }
