--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,4 +5,7 @@
     padding-top: 90px;
     margin-top: 100px;
     color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
