--- a/src/components/Mounts/MountSearch.css
+++ b/src/components/Mounts/MountSearch.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
-.main-container {
+.main-container-input {
     margin-top: 50px;
     display: flex;
     justify-content: center;
+    position:fixed;
+    top: 100px;
+    width: 30%;
 }
 
 .input {
