--- a/src/containers/PetDetails.css
+++ b/src/containers/PetDetails.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .icon-pet {
     border: 3px solid #134074;
